# Robotics

./: IPs  IPs-extra  NOTES  finroc.org.list  hgrc  hgrc-extra2  keyserver-finroc-hg  nvidia-384-ubuntu16-04-amd64  openssh-server-client  rrlab.list  sources.list
AdafruitStepperMotorHAT/: Adafruit_MotorHAT.cpp  PWM.cpp  README  make.xml
AdafruitStepperMotorHAT/tests/: DCMotorTest.cpp  MotorOFF.c  StepperMotorTest.cpp
AdafruitStepperMotorHAT_CPP/: DCMotorTest  DCMotorTest.cpp  Makefile  MotorOFF  MotorON  MotorON.c  StepperMotorTest  nohup.out  tcpclient  tcpclient.cpp  tcpserver  tcpserver.cpp  test.c
DCMotorTestControl/: mDCMotorControl.cpp  mDCMotorControl.h  make.xml  pDCMotorControl.cpp
Gozdeh/: Adafruit_ADS1015_2.h  gozdeh-raspi-fnirs  leddemo_org.cpp  leddemo_org.py  libdb.raw.arduino-addition  libdb.search.default.arduino-addition  make.xml
etc/: NOTES
howtos/: fetch-Newton.sh  hgrc  nvidia-384-ubuntu16-04-amd64
misc/: IPs  hgrc-extra  ifconfig-ips  sync_config.xml
my-AG-Desktop-NOTES/: ImageMagick.txt  OpenTraversability_mauro_git_removed  baobob_disk_analyzer.txt  daily_routine.docx  database_mnt-bigtmp-ARAS  diss_aras_trunk prep.docx  dropbox_notes_konsole_stuff  mnt_opt_matlab-docear-vrep-and-etc  more_data_in_server  nsight-eclipse-cuda  setxkbmap-us.docx  trash_using_terminal.txt
my-AG-Desktop-NOTES/CLI/: 06-22_tobias_systemFiles  06-25_michael_kde  konsole  konsole_04-27_firefox_christopherArmbrust_used-1.txt  konsole_05-16_windows_chris.txt  konsole_05-17-hardDisk_atif.txt  konsole_05-18_finroc-2_export-libs-bash.txt  konsole_05-18_finroc-2_export-libs.txt  konsole_05-18_finroc-3_editing-bash_opening-new-konsole.txt  konsole_05-18_finroc.txt  konsole_05-18_finroc_2_all-dependency_tobias.txt  konsole_05-22_password.txt  konsole_05-29_mca2_1-scripts.txt  konsole_05-29_mca2_Atif.txt  konsole_05-29_mca2_Atif_2.txt  konsole_05-29_mca2_Atif_3.txt  konsole_09-26_catProc_testHome_aras.txt  konsole_09-26_test.txt  konsole_2012-04-26_svn_thomasPfister.txt  konsole_2012-05-16_svn_chris.txt  konsole_2012-05-17_svn-CheckIn_atif.txt  konsole_2012-05-17_svn-CheckOut-1.txt  konsole_2012-05-17_svn-CheckOut-2-template_slides.txt  konsole_2012-05-17_svn-CheckOut-3-openRDK.txt  konsole_2012-05-17_svn-CheckOut-3-sitzung-conflict-problem.txt  konsole_2012-11-07_tar-unzip_Guide  konsole_2013-01-24_tobisInstallingLibraries-onagrosyLaptop-2.txt  konsole_2013-01-24_tobisInstallingLibraries-onagrosyLaptop.txt  konsole_2013-01-25_pdfManipulation-2.txt  konsole_2013-01-25_pdfManipulation-3.txt  konsole_2013-01-25_pdfManipulation-jo_sRequest-amazingggg.txt  konsole_2013-01-26_debpkg-google.txt  konsole_2013-01-26_debpkg_2-dropbox.txt  konsole_2013-02-04_gdb.txt  konsole_2013-03-01_mozilla-problem-exitting_patrik.txt  konsole_2013-03-02_how-to-lower-size-of-pdf-2.txt  konsole_2013-03-02_how-to-lower-size-of-pdf.txt  konsole_2013-03-03_aras-ssh-2.txt  konsole_2013-03-03_aras-ssh-3.txt  konsole_2013-03-03_aras-ssh-4_localhost.txt  (+40 more)
my-AG-Desktop-NOTES/finroc-related/: bashrc.txt  finroc_perp.txt  finroc_projects_stereo_traversability_experiments.docx  hgrc.txt  hgrc_orig.txt  packages.txt
my-AG-Desktop-NOTES/lib-PCL_cmake_examples_organized/cloud_viewer/: CMakeLists.txt  cloud_viewer_aras.cpp
my-AG-Desktop-NOTES/lib-PCL_cmake_examples_organized/imagelist_creator/: CMakeLists.txt  notes  test_imagelist_creator.cpp
my-AG-Desktop-NOTES/libs/: lib-google-.txt  libs-list-2014-11-25.txt
my-AG-Desktop-NOTES/thunderbird__pidgin__chrom/: thunderbird_online_onWeb-howCanIHaveIt
my-finroc-files/: hgrc  libdb.txt  linux_arm_debug  sync_config.xml
my-finroc-proj/: .cproject  .project  README  TODO
my-finroc-proj/MLR/: _cproject(1).xml  _dict-validwords(1)  main_wrapper.cpp  make.xml  tMLR.h
my-finroc-proj/MLR/control/: README  make.xml  (+6 more)
my-finroc-proj/openTraverse/alex/etc/: CMakeLists.txt  stereo_ground_segmentation.cpp
my-finroc-proj/openTraverse/mauro/cmake/: CMakeLists.txt  UPD.cpp  UPD.h  test.cpp
my-finroc-proj/segmentation/otb_tests/cmake/etc/seg_app/: CMakeLists.txt
my-finroc-proj/segmentation/otb_tests/cmake/etc/seg_example/: CMakeLists.txt
my-finroc-proj/segmentation/otb_tests/cmake/etc/text_app/: CMakeLists.txt
my-finroc-proj/segmentation/otb_tests/cmake/etc/text_example/: AdvancedTextureExample.cxx  CMakeLists.txt
my-finroc-proj/stereo/etc/: CMakeLists.txt  calib_v3_haris_data  libdb.txt_misc  main.fingui  notes  stereo_calib.xml.1  stereo_calib.xml.2  sync_config_aras_pc.xml  sync_config_wlan_laptop.xml  tContentColorTrait.hpp  tQuaternion.h  tQuaternion.hpp
my-finroc-proj/stereo/libstereo_test/cmake/: CMakeLists.txt  main.cpp  notes  student_func.cu
my-finroc-proj/stereo/libstereo_test/cmake/cpu/: test_cpu.cpp
my-finroc-proj/stereo/libstereo_test/cmake/gpu/: kernel_func.cu  test_gpu.cpp
my-finroc-proj/stereo/libstereo_test/gpu_cmake/: CMakeLists.txt  gpu_part.cu  gpu_part.h  test_gpu_part.cpp
my-finroc-proj/stereo/libstereo_test/gpu_finroc/: CMakeLists.txt  gpu_part.cpp  gpu_part.h  gpu_part_kernel_func.cu  gpu_part_proc.cu  make.xml.only-32bit.why  test_gpu_part.cpp
my-finroc-proj/stereo/pointCloudProcessing/etc/: CMakeLists.txt  notes  processCloud.cpp
my-finroc-proj/stereo/stereo_ravon/calibration/: CMakeLists.txt  make.xml.orig  stereo_chessboard.cpp
my-finroc-proj/stereo/stereo_ravon/capture/: CMakeLists.txt  make.xml.bck  stereo_capture.cpp  stereo_capture_bb.cpp  stereo_capture_camera.cpp
my-finroc-proj/stereo_related/: stereo_match_PME_code_federiko_tombari_removed  stereo_match_libelas_method_removed
petrover/: gPetRover.cpp  gPetRover.h  make.xml  pPetRover.cpp
test/: CMakeLists.txt  mRaspberryPiCamera.cpp  mRaspberryPiCamera.h  mRaspberryPiCameraTest.cpp  mRaspberryPiCameraTest.h  mRaspberryPieCamera.cpp  mRaspberryPieCamera.h  make.xml  online-shell-test.cpp  pRaspberryPiCamera.cpp  pRaspberryPiCameraTest.cpp  pRaspberryPieCamera.cpp  raspicam.cpp  rtti.cpp  tRaspberryPieCamera.cpp  tRaspberryPieCamera.h  test_raspberry-pie-camera.cpp  test_raspberry-pie-camera.h  test_raspicam.cpp
test/etc/: rsync.txt  sync_config.xml
(+901 files in other folders)
